[gd_scene load_steps=18 format=2]

[ext_resource path="res://assets/botao_play.png" type="Texture" id=1]
[ext_resource path="res://cenas_universais/mensagem_vitoria.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/cenario_farol_de_ponta_verde_cordel.png" type="Texture" id=3]
[ext_resource path="res://assets/tela_comando.png" type="Texture" id=4]
[ext_resource path="res://assets/minion_cangaceiro.png" type="Texture" id=5]
[ext_resource path="res://assets/ideia_aluado.png" type="Texture" id=6]
[ext_resource path="res://assets/espaco_instrucoes.png" type="Texture" id=7]
[ext_resource path="res://assets/botao_lixeira.png" type="Texture" id=8]
[ext_resource path="res://assets/base_unidades.png" type="Texture" id=9]
[ext_resource path="res://assets/Retro Gaming.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://niveis/cordel1/nivel2/cordel1_nivel2.gd" type="Script" id=11]
[ext_resource path="res://niveis/cordel1/nivel2/c1_n2_instrucoes.gd" type="Script" id=12]
[ext_resource path="res://niveis/cordel1/nivel2/c1_n2_cartas.gd" type="Script" id=13]
[ext_resource path="res://cenas_universais/botaoVoltaMenu.tscn" type="PackedScene" id=14]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=2]
size = 45
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 10 )

[node name="cordel1_nivel2" type="Node2D"]
script = ExtResource( 11 )

[node name="background" type="Sprite" parent="."]
position = Vector2( 225, 156 )
scale = Vector2( 3.5, 3.5 )
texture = ExtResource( 3 )

[node name="fundo" type="Sprite" parent="."]
position = Vector2( 256, 150 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="s_instrucao_um" type="Sprite" parent="fundo"]
position = Vector2( 380, -207 )
scale = Vector2( 2.38077, 2 )
texture = ExtResource( 7 )

[node name="s_instrucao_dois" type="Sprite" parent="fundo"]
position = Vector2( 380, -63 )
scale = Vector2( 2.38077, 2 )
texture = ExtResource( 7 )

[node name="cartas" type="Node" parent="."]
script = ExtResource( 13 )

[node name="carta1" type="TextureButton" parent="cartas"]
margin_left = 96.0
margin_top = 176.0
margin_right = 160.0
margin_bottom = 260.0
rect_scale = Vector2( 1.25, 1.25 )
texture_normal = ExtResource( 9 )

[node name="numero" type="Label" parent="cartas/carta1"]
margin_left = 8.0
margin_top = 9.0
margin_right = 56.0
margin_bottom = 77.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1

[node name="carta2" type="TextureButton" parent="cartas"]
margin_left = 192.0
margin_top = 176.0
margin_right = 256.0
margin_bottom = 260.0
rect_scale = Vector2( 1.25, 1.25 )
texture_normal = ExtResource( 9 )

[node name="numero" type="Label" parent="cartas/carta2"]
margin_left = 8.0
margin_top = 9.0
margin_right = 56.0
margin_bottom = 77.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1

[node name="instrucoes" type="Node" parent="."]
script = ExtResource( 12 )

[node name="instrucao_um" type="Label" parent="instrucoes"]
margin_left = 384.0
margin_top = 16.0
margin_right = 508.0
margin_bottom = 78.0
custom_fonts/font = SubResource( 2 )
align = 1
valign = 1

[node name="instrucao_dois" type="Label" parent="instrucoes"]
margin_left = 384.0
margin_top = 87.0
margin_right = 508.0
margin_bottom = 149.0
custom_fonts/font = SubResource( 2 )
align = 1
valign = 1

[node name="botao_pronto" type="TextureButton" parent="."]
margin_left = 384.0
margin_top = 224.0
margin_right = 424.0
margin_bottom = 264.0
rect_scale = Vector2( 1.75, 1.75 )
texture_normal = ExtResource( 1 )

[node name="botao_lixeira" type="TextureButton" parent="."]
margin_left = 451.0
margin_top = 229.0
margin_right = 491.0
margin_bottom = 269.0
rect_scale = Vector2( 1.5, 1.5 )
texture_normal = ExtResource( 8 )

[node name="jogador" type="Sprite" parent="."]
position = Vector2( 56, 112 )
scale = Vector2( 3, 3 )
texture = ExtResource( 6 )
flip_h = true

[node name="inimigo" type="Sprite" parent="."]
position = Vector2( 330, 112 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 5 )

[node name="menos_seis" type="Label" parent="."]
margin_left = 88.0
margin_top = 16.0
margin_right = 293.0
margin_bottom = 67.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "2 + 2 = ?"
align = 1
valign = 1

[node name="mensagem_vitoria" parent="." instance=ExtResource( 2 )]
visible = false
nivelRestart = "res://niveis/cordel1/nivel2/cordel1_nivel2.tscn"

[node name="botaoVoltaMenu" parent="." instance=ExtResource( 14 )]
margin_left = 10.0
margin_top = 11.0
margin_right = 30.0
margin_bottom = 31.0
rect_scale = Vector2( 2, 2 )

[connection signal="pressed" from="cartas/carta1" to="instrucoes" method="_on_carta1_pressed"]
[connection signal="pressed" from="cartas/carta2" to="instrucoes" method="_on_carta2_pressed"]
[connection signal="pressed" from="botao_pronto" to="." method="_on_botao_pronto_pressed"]
[connection signal="pressed" from="botao_lixeira" to="instrucoes" method="_on_botao_lixeira_pressed"]
